# OUCRU-Malaria-Sim-v3.0.2

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
Cmake/: .gitignore  CMakeLists.txt
Cmake/ext/gtest/: CMakeLists.txt
Cmake/ext/yaml-cpp/: CMakeLists.txt
Cmake/src/: ACTIncreaseStrategy.h  AdaptiveCyclingStrategy.cpp  BurninFarmReporter.cpp  CMakeLists.txt  ConsoleReporter.cpp  Drug.cpp  DrugType.cpp  Event.cpp  ExternalPopulation.cpp  ImmuneComponent.h  ImmuneSystem.cpp  ImmunityClearanceUpdateFunction.h  IntGenotype.h  MACTherapy.cpp  MDAAction.cpp  MFTStrategy.cpp  ModelDataCollector.h  NonInfantImmuneComponent.h  NovelNonACTSwitchingStrategy.cpp  PersonIndex.cpp  PersonIndexAll.cpp  PersonIndexByLocationBittingLevel.cpp  PersonIndexByLocationExternalPopulationMovingLevelHandler.cpp  PersonIndexByLocationStateAgeClass.cpp  Population.cpp  Random.h  SFTStrategy.cpp  Scheduler.cpp  SingleHostClonalParasitePopulations.cpp  StrategyBuilder.cpp  TMEAction.cpp  TMEActionFactory.cpp  TMEScheduler.h  YearlyReporterV1.cpp
Cmake/test/: CMakeLists.txt
EC50_EfficacyTableGenerator/: IndividualsFileReporter.cpp  IndividualsFileReporter.h  PkPdReporter.cpp  PkPdReporter.h  input.yml  main.cpp  out.txt
MalariaCore/: ACTIncreaseStrategy.cpp  ACTIncreaseStrategy.h  AMUReporter.cpp  AdaptiveCyclingStrategy.cpp  AdaptiveCyclingStrategy.h  AgeGroup2To10Reporter.cpp  AgeGroup2To10Reporter.h  Barabasi.cpp  Barabasi.h  BirthdayEvent.cpp  BittingLevelGenerator.cpp  BurninFarmReporter.cpp  BurninFarmReporter.h  BurninMonthlyReporter.cpp  CirculateToTargetLocationNextDayEvent.cpp  ClinicalUpdateFunction.cpp  ClonalParasitePopulation.cpp  ClonalParasitePopulation.h  Config.cpp  Config.h  ConsoleReporter.cpp  CosineSeasonality.cpp  CosineSeasonality.h  CyclingStrategy.cpp  CyclingStrategy.h  Dispatcher.cpp  Drug.cpp  Drug.h  DrugType.cpp  DrugType.h  DrugsInBlood.cpp  DrugsInBlood.h  EndClinicalByNoTreatmentEvent.cpp  EndClinicalDueToDrugResistanceEvent.cpp  EndClinicalEvent.cpp  ExternalPopulation.cpp  FarmReporter.cpp  FarmReporter.h  GeneralGravity.cpp  GeneralGravity.h  (+108 more)
MalariaSimulation/: age_dependent_bitting_level.yml  competition.yml  config_2ACT_SP_75_MFT.yml  config_2ACT_SP_85_MFT.yml  config_2ACT_SP_95_MFT.yml  config_3ACT_7d_MFT_1.yml  config_feb21_7d.yml  farm.txt  farm_mmc.txt  final_check.txt  hasting_comparison.yml  hasting_comparison_MOI1.yml  hasting_comparison_MOI4.yml  high_trans_fixed.txt  input_MMC.Congo.yml  input_MMC.Zambia.yml  input_MMC.yml  input_TACT.yml  input_TACT_AL.yml  input_TACT_ASAQ.yml  input_file_non_art.yml  input_file_non_art_sft.yml  input_file_v3.1.1_Merged.yml  main.cpp  override.txt  sample_input_file.yml  test.txt  test_input_file.yml  yearly_data_1458788477_0.txt
PkPdSimulation/: PkPd.m  PkPdReporter.cpp  individuals.txt  individuals_1.txt  individuals_2.txt  individuals_3.txt  individuals_4.txt  individuals_5.txt  individuals_6.txt  individuals_7.txt  individuals_ASMQ_1.txt  individuals_ASMQ_2.txt  individuals_ASMQ_3.txt  individuals_ASMQ_4.txt  individuals_ASMQ_5.txt  individuals_ASMQ_6.txt  individuals_DHAPPQ_1.txt  individuals_DHAPPQ_2.txt  individuals_DHAPPQ_3.txt  individuals_DHAPPQ_4.txt  individuals_DHAPPQ_5.txt  individuals_DHAPPQ_6.txt  input_TACT.yml  main.cpp  sample_input_file.yml
cmake/: .gitignore  CMakeLists.txt  CMakeSettings.json  input.yml
cmake/ext/yaml-cpp/: CMakeLists.txt
cmake/misc/: BurkinaFaso.xlsx  input.yml  input_BF.yml
cmake/src/: ACTIncreaseStrategy.cpp  AMUReporter.cpp  AdaptiveCyclingStrategy.cpp  BurninFarmReporter.cpp  BurninMonthlyReporter.cpp  CMakeLists.txt  CirculateToTargetLocationNextDayEvent.cpp  ClonalParasitePopulation.cpp  Config.cpp  Config.h  ConsoleReporter.cpp  CyclingStrategy.cpp  CyclingStrategy.h  Drug.cpp  DrugDatabase.cpp  DrugType.cpp  ExternalPopulation.cpp  FarmReporter.cpp  GuiReporter.cpp  HelperFunction.h  IStrategy.cpp  IStrategy.h  ImportationPeriodicallyEvent.cpp  IndexHandler.cpp  InfantImmuneComponent.cpp  MFTRebalancingStrategy.h  MFTStrategy.cpp  MatureGametocyteEvent.cpp  Model.cpp  Model.h  ModelDataCollector.cpp  ModelDataCollector.h  MonthlyReporter.cpp  MonthlyReporterConsole.cpp  MoveParasiteToBloodEvent.cpp  MoveToExternalPopulationEvent.cpp  MultipleLocationGuiReporter.cpp  NestedSwitchingStrategy.cpp  NovelNonACTSwitchingStrategy.h  ObjectPool.h  (+31 more)
cmake/src/Reporters/: AMUReporter.cpp  BFFarmReporter.cpp  BFMonthlyReporter.cpp  BFMonthlyReporter.h  BFReporter.cpp  BFReporter.h  BurninFarmReporter.cpp  FarmReporter.cpp  MonthlyReporter.cpp  Reporter.cpp  Reporter.h
cmake/src/Spatial/: BarabasiSM.cpp  BarabasiSM.h  Coordinate.cpp  Coordinate.h  GeneralGravitySM.cpp  GeneralGravitySM.h  Location.cpp  Location.h  SpatialModel.h  SpatialModelBuilder.cpp  SpatialModelBuilder.h  WesolowskiSM.cpp  WesolowskiSM.h
cmake/test/: CMakeLists.txt
cmake/test/Spatial/: LocationTest.cpp
misc/: input.yml  input_BF.yml
python/: EC50_tables.py  farm_generator.py
sample_inputs/: config_2ACT_SP_75_MFT.yml  config_2ACT_SP_95_MFT.yml  farm.txt  hasting_comparison_MOI2.yml
src/: ACTIncreaseStrategy.cpp  ACTIncreaseStrategy.h  AMUReporter.cpp  AMUReporter.h  AdaptiveCyclingStrategy.cpp  AdaptiveCyclingStrategy.h  AgeGroup2To10Reporter.cpp  AgeGroup2To10Reporter.h  BirthdayEvent.cpp  BirthdayEvent.h  CMakeLists.txt  (+161 more)
test/: CMakeLists.txt  OneTestSuite.cpp  main.cpp
test/Spatial/: LocationTest.cpp
(+122 files in other folders)
